codex-rs/tui/src/app/snapshots/codex_tui__app__agent_delete__tests__delete_agent_picker_popup.snap
---
source: tui/src/app/agent_delete.rs
expression: "render_selection_popup(&view, 92, 18)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 92, height: 18 },
    content: [
        "                                                                                            ",
        "  Delete Agent                                                                              ",
        "  Select an open agent thread to archive.                                                   ",
        "                                                                                            ",
        "  Type to search open agents                                                                ",
        "› • Scout [worker] (current)  00000000-0000-0000-0000-000000000123                          ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "  Press enter to confirm or esc to go back                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 66, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 92, height: 0 }
}, cursor: false, pos: (0, 0) }
